--- a/src/components/Layout.css
+++ b/src/components/Layout.css
@@ -23,7 +23,7 @@
   body {
     margin: 0;
     font-family: 'Roboto Mono', monospace;
-    background: linear-gradient(135deg, #6a11ce, #2575fc);
+    background: linear-gradient(135deg, #6a11ce, #770909);
     color: #fff;
   }
   
